# zebrafish-behaviour-suite

./: .gitignore  pyproject.toml
src/zf_bhv_suite/: config.py  core.py  deleteme.py
tests/: test_core.py
