[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zf_bhv_suite"
version = "0.1.0"
description = "A suite of functions for analyzing zebrafish larvae sleep and behavioral data (building on FramebyFrame)."
readme = "README.md"
authors = [
    {name = "Talia Pittman", email = "talia.pittman.19@ucl.ac.uk"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
]

[tool.setuptools.packages]
# Tells setuptools to find the package named 'zf_bhv_suite' inside the 'src' directory.
find = {where = ["src"]}
